apps/garden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garden
  labels:
    app: garden
spec:
  type: ClusterIP
  selector:
    app: garden
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
